--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "besu-runner-lib",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A library for running and managing Besu nodes",
   "main": "dist/src/index.js",
   "types": "dist/src/index.d.ts",
@@ -26,5 +26,9 @@
   "dependencies": {
     "readline-sync": "^1.4.10"
   },
-  "type": "module"
+  "type": "module",
+  "bin": {
+  "besu-runner-lib": "./dist/src/cli.js"
+}
+
 }
